Added figure 3 caption

--- a/HW2/CentralLimitTheorem.ipynb
+++ b/HW2/CentralLimitTheorem.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Figure 1: This figure plots the mean of a sample of a distribution, plotted against the sample size. The true mean of all distributions was 100. We can see that the means of the samples with low sample sizes have a greater disparity from the true mean, while the samples with large sizes have a mean closer to the true mean. This follows from the law of large numbers which states that the mean of the sample will approach the mean of the distribution as the size of the sample gets large. Additionally, we can qualitatively see the effects of the central limit theorem when we sample the distribition many times, the distribution of means looks like a normal distribution with the same mean as the mean of the underlying distribution."
+    "### Figure 1: This figure plots the mean of a sample of a distribution, plotted against the sample size. The true mean of all distributions was 100. We can see that the means of the samples with low sample sizes have a greater disparity from the true mean, while the samples with large sizes have a mean closer to the true mean. This follows from the law of large numbers which states that the mean of the sample will approach the mean of the distribution as the size of the sample gets large. Additionally, we can qualitatively see the effects of the central limit theorem when we sample the distribition many times, the distribution of means looks like a normal distribution with the same mean as the mean of the underlying distribution."
    ]
   },
   {
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Figure 2: The distribution of sample means across all 500 samples from all five distributions. Qualitatively, the shape of this histogram looks like a normal distribution, further reinforcing the central limit theorem."
+    "### Figure 2: The distribution of sample means across all 500 samples from all five distributions. Qualitatively, the shape of this histogram looks like a normal distribution, further reinforcing the central limit theorem which says that the distribution of sample means taken from any distribution (will a well defined mean) will be normally distributed with a mean equal to the mean of the original distribution."
    ]
   },
   {
@@ -225,6 +225,13 @@
     "plt.title(\"Gaussian Fit to Histogram of Sample Means\")\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figure 3: A Gaussian is fit to the histogram of samples, showing a mean of 99.99 with an R$^2$ of 0.963. The central limit theorem says that the disitrbution of the sample means tends toward a normal distribution with a mean equal to the mean of the original disitrbution and this Gaussian fit provides evidence for that."
    ]
   },
   {
