Updated Lab1 caption

--- a/Labs/Lab1.ipynb
+++ b/Labs/Lab1.ipynb
@@ -501,7 +501,7 @@
    "id": "3f598339-39db-4685-a01c-46491e0ec4a2",
    "metadata": {},
    "source": [
-    "### Figure 1: We know that the null hypothesis is rejected if this Z-test is more extreme than our p-value. The hypothesis was that the rainfall in this particular period comes from a population of rainfall different from one with mu and sigma given above. Because the Z-test value was 1.4, and our threshold p-value was 0.007 (3 sigma), we can say that we do not reject this hypot"
+    "### Figure 1: We know that the null hypothesis is rejected if this Z-test is more extreme than our p-value. The hypothesis was that the rainfall in this particular period comes from a population of rainfall different from one with mu and sigma given above. Because the Z-test value was 1.4, and our threshold p-value was 0.007 (3 sigma), we can say that we do not reject this null hypothesis."
    ]
   },
   {
