Final commit for HW3

--- a/HW3/Starting_in_class.ipynb
+++ b/HW3/Starting_in_class.ipynb
@@ -562,6 +562,103 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "f731c03e-1673-49f7-94e3-c114c112e77d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mag</th>\n",
+       "      <th>dt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>70797.000000</td>\n",
+       "      <td>70797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2.417832</td>\n",
+       "      <td>0 days 02:21:08.196000819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.407683</td>\n",
+       "      <td>0 days 03:53:42.570616312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0 days 00:00:00.010000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.120000</td>\n",
+       "      <td>0 days 00:08:05.160000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2.300000</td>\n",
+       "      <td>0 days 00:46:00.930000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2.590000</td>\n",
+       "      <td>0 days 02:51:48.960000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.100000</td>\n",
+       "      <td>2 days 21:01:52.030000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                mag                         dt\n",
+       "count  70797.000000                      70797\n",
+       "mean       2.417832  0 days 02:21:08.196000819\n",
+       "std        0.407683  0 days 03:53:42.570616312\n",
+       "min        2.000000     0 days 00:00:00.010000\n",
+       "25%        2.120000     0 days 00:08:05.160000\n",
+       "50%        2.300000     0 days 00:46:00.930000\n",
+       "75%        2.590000     0 days 02:51:48.960000\n",
+       "max        7.100000     2 days 21:01:52.030000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eqdata.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "ab028996-036f-4625-bfcf-bb55156e51f5",
    "metadata": {},
    "outputs": [],
@@ -596,10 +693,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "id": "2537786a-7310-46bc-b11f-402ae3c176fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64626"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dates = (((eqdata.datetime >= ss[0][0]) & (eqdata.datetime >= ss[0][1])) |\\\n",
     "         ((eqdata.datetime >= ss[1][0]) & (eqdata.datetime >= ss[1][1])) |\\\n",
@@ -611,31 +719,148 @@
     "         ((eqdata.datetime >= ss[7][0]) & (eqdata.datetime >= ss[7][1])) |\\\n",
     "         ((eqdata.datetime >= ss[8][0]) & (eqdata.datetime >= ss[8][1])) |\\\n",
     "         ((eqdata.datetime >= ss[9][0]) & (eqdata.datetime >= ss[9][1])) |\\\n",
-    "         ((eqdata.datetime >= ss[10][0]) & (eqdata.datetime >= ss[10][1])))"
+    "         ((eqdata.datetime >= ss[10][0]) & (eqdata.datetime >= ss[10][1])))\n",
+    "dates.sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "1e7cfe88-b4fa-4eab-a559-3cace055fcc2",
+   "execution_count": 35,
+   "id": "ef37109f-a275-4fd6-8724-d6fca16888d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6172   1986-07-03 00:48:12.550\n",
-       "6173   1986-07-03 09:01:32.700\n",
-       "6174   1986-07-03 10:03:05.630\n",
-       "6175   1986-07-03 21:08:36.650\n",
-       "6176   1986-07-03 22:11:40.800\n",
-       "Name: datetime, dtype: datetime64[ns]"
+       "18851"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "gooddates = (((eqdata.datetime >= ss[0][0]) & (eqdata.datetime <= ss[0][1])) +\\\n",
+    "        # data between start and end of second time period\n",
+    "        ((eqdata.datetime >=ss [1][0]) & (eqdata.datetime <= ss[1][1])) |\\\n",
+    "        ((eqdata.datetime >=ss [2][0]) & (eqdata.datetime <= ss[2][1])) |\\\n",
+    "        ((eqdata.datetime >=ss [3][0]) & (eqdata.datetime <= ss[3][1])) |\\\n",
+    "        ((eqdata.datetime >=ss [4][0]) & (eqdata.datetime <= ss[4][1])) |\\\n",
+    "        ((eqdata.datetime >=ss [5][0]) & (eqdata.datetime <= ss[5][1])) |\\\n",
+    "        ((eqdata.datetime >=ss [6][0]) & (eqdata.datetime <= ss[6][1])) |\\\n",
+    "        ((eqdata.datetime >=ss [7][0]) & (eqdata.datetime <= ss[7][1])) |\\\n",
+    "        ((eqdata.datetime >=ss [8][0]) & (eqdata.datetime <= ss[8][1])) |\\\n",
+    "        ((eqdata.datetime >=ss [9][0]) & (eqdata.datetime <= ss[9][1])) |\\\n",
+    "        # data between start and end of last time period\n",
+    "        ((eqdata.datetime >=ss [10][0]) & (eqdata.datetime <= ss[10][1])\\\n",
+    "        ).values)\n",
+    "gooddates.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "f6d59d6f-edd1-46c7-b641-fd560af67e53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mag</th>\n",
+       "      <th>dt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>70797.000000</td>\n",
+       "      <td>70797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2.417832</td>\n",
+       "      <td>0 days 02:21:08.196000819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.407683</td>\n",
+       "      <td>0 days 03:53:42.570616312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0 days 00:00:00.010000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.120000</td>\n",
+       "      <td>0 days 00:08:05.160000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2.300000</td>\n",
+       "      <td>0 days 00:46:00.930000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2.590000</td>\n",
+       "      <td>0 days 02:51:48.960000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.100000</td>\n",
+       "      <td>2 days 21:01:52.030000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                mag                         dt\n",
+       "count  70797.000000                      70797\n",
+       "mean       2.417832  0 days 02:21:08.196000819\n",
+       "std        0.407683  0 days 03:53:42.570616312\n",
+       "min        2.000000     0 days 00:00:00.010000\n",
+       "25%        2.120000     0 days 00:08:05.160000\n",
+       "50%        2.300000     0 days 00:46:00.930000\n",
+       "75%        2.590000     0 days 02:51:48.960000\n",
+       "max        7.100000     2 days 21:01:52.030000"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eqdata.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1e7cfe88-b4fa-4eab-a559-3cace055fcc2",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Throw out the data that is not within the seismic periods we are interested\n",
     "# in.\n",
