Final updates to lab 1

--- a/Labs/Lab1.ipynb
+++ b/Labs/Lab1.ipynb
@@ -505,9 +505,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e62cfa5-d6dd-4492-9f8c-20321219d1a1",
+   "metadata": {},
+   "source": [
+    "So this set of rainfall does not come from a population of rainfall different from one distributed normally with mean mu and standard deviation sigma."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "362c5950-8011-4784-9057-d0d09c293593",
+   "metadata": {},
+   "source": [
+    "I know that this plot needs xlabels, I need to think about this some more."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce7e9d84-ae32-481a-bf5e-e59f81af5de7",
+   "id": "265ba876-2f80-4b9c-9fb4-38797c8010de",
    "metadata": {},
    "outputs": [],
    "source": []
