Comment out the mpl style file because it was messing things up on colab

--- a/HW5/HW5.ipynb
+++ b/HW5/HW5.ipynb
@@ -20,9 +20,9 @@
     "import emcee\n",
     "import corner\n",
     "\n",
-    "custom_mplstyle = (\"https://raw.githubusercontent.com/FoxFortino\"\n",
-    "                   \"/DSPS_WFortino/main/custom.mplstyle\")\n",
-    "plt.style.use(custom_mplstyle)"
+    "# custom_mplstyle = (\"https://raw.githubusercontent.com/FoxFortino\"\n",
+    "#                    \"/DSPS_WFortino/main/custom.mplstyle\")\n",
+    "# plt.style.use(custom_mplstyle)"
    ]
   },
   {
