--- a/HW5/HW5.ipynb
+++ b/HW5/HW5.ipynb
@@ -17,8 +17,8 @@
     "import astropy.time\n",
     "import astropy.units as u\n",
     "import astropy.constants as c\n",
-    "import emcee\n",
-    "import corner\n",
+    "# import emcee\n",
+    "# import corner\n",
     "\n",
     "# custom_mplstyle = (\"https://raw.githubusercontent.com/FoxFortino\"\n",
     "#                    \"/DSPS_WFortino/main/custom.mplstyle\")\n",
