--- a/Midterm.ipynb
+++ b/Midterm.ipynb
@@ -22,9 +22,9 @@
     "import corner\n",
     "import emcee\n",
     "\n",
-    "custom_mplstyle = (\"https://raw.githubusercontent.com/FoxFortino\"\n",
-    "                   \"/DSPS_WFortino/main/custom.mplstyle\")\n",
-    "plt.style.use(custom_mplstyle)"
+    "# custom_mplstyle = (\"https://raw.githubusercontent.com/FoxFortino\"\n",
+    "#                    \"/DSPS_WFortino/main/custom.mplstyle\")\n",
+    "# plt.style.use(custom_mplstyle)"
    ]
   },
   {
@@ -966,7 +966,7 @@
     "                                    size=(nWalkers, nDim), random_state=rng)\n",
     "sampler = emcee.EnsembleSampler(nWalkers, nDim, log_prob,\n",
     "                                args=(t, Y, Yerr))\n",
-    "final_state = sampler.run_mcmc(pos, 5000, progress=True)"
+    "final_state = sampler.run_mcmc(pos, 35000, progress=True)"
    ]
   },
   {
