Final commit for HW7

--- a/HW7/HW7.ipynb
+++ b/HW7/HW7.ipynb
@@ -20,8 +20,8 @@
     "import astropy.time\n",
     "import astropy.units as u\n",
     "import astropy.constants as c\n",
-    "import emcee\n",
-    "import corner\n",
+    "# import emcee\n",
+    "# import corner\n",
     "import sklearn\n",
     "import sklearn.preprocessing\n",
     "import sklearn.manifold\n",
@@ -31,9 +31,9 @@
     "# ! pip install corner\n",
     "# ! pip install emcee\n",
     "\n",
-    "custom_mplstyle = (\"https://raw.githubusercontent.com/FoxFortino\"\n",
-    "                   \"/DSPS_WFortino/main/custom.mplstyle\")\n",
-    "plt.style.use(custom_mplstyle)"
+    "# custom_mplstyle = (\"https://raw.githubusercontent.com/FoxFortino\"\n",
+    "#                    \"/DSPS_WFortino/main/custom.mplstyle\")\n",
+    "# plt.style.use(custom_mplstyle)"
    ]
   },
   {
